# CMakeCxxModules

./: CMakeLists.txt  CXXModules.cmake
.github/workflows/: build.yaml
msvc-example/: CMakeLists.txt  hello.cpp  main.cpp
